Fixed grid gap for some browsers

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -129,7 +129,7 @@ footer .container {
 
 .shows {
   display: grid;
-  gap: 2em;
+  grid-gap: 2em;
   margin: 2em 0;
 }
 
